2012-05-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR rtl-optimzation/53373
	* config/pa/pa.md (call_symref_pic): Don't expose PIC register save in
	call pattern.  Update split patterns.
	(call_symref_64bit, call_reg_pic, call_reg_64bit, call_val_symref_pic,
	call_val_symref_64bit, call_val_reg_pic, call_val_reg_64bit): Likewise.

2012-05-20  Razya Ladelsky  <razya@il.ibm.com>
	
	* tree-parloops.c (gen_parallel_loop): Change many_iterations_cond for outer loops.

2012-05-18  Jan Hubicka  <jh@suse.cz>

	* cgraphunit.c (handle_alias_pairs): Declare; free alias_pairs
	(cgraph_process_new_functions): Process also aliases.
	* lto-streamer-out.c (struct sets): Remove.
	(trivally_defined_alias): Remove.
	(output_alias_pair_p): Remove.
	(output_unreferenced_globals): Remove.
	(produce_symtab); Do not handle alias pairs.
	(produce_asm_for_decls): Likewise.
	* lto-streamer-in.c (input_alias_pairs): Remove.
	(lto_read_body): Do not input alias pairs.
	(lto_input_constructors_and_inits): Remove.

2012-05-18  Jan Hubicka  <jh@suse.cz>

	* cgraphunit.c (handle_alias_pairs): Cleanup; handle all types of aliases.

2012-05-18  Jan Hubicka  <jh@suse.cz>

	* cgraphbuild.c (record_reference): Update.
	* lto-cgraph.c (lto_output_varpool_node): External vars
	are not in other partition even if they are not output
	in current partition.
	* gimple-fold.c (can_refer_decl_in_current_unit_p): Take FROM_DECL
	argument; fix.
	(canonicalize_constructor_val): Take FROM_DECL argument.
	(fold_ctor_reference, fold_string_cst_ctor_reference,
	fold_array_ctor_reference, fold_nonarray_ctor_reference,
	fold_ctor_reference): Likewise.
	(fold_const_aggregate_ref_1, gimple_get_virt_method_for_binfo): Update.
	* gimple.h (gimple_fold_builtin): Likewise.

2012-05-18  Olivier Hainque  <hainque@adacore.com>

	* Makefile.in (FLAGS_TO_PASS): Pass $(libexecsubdir) instead of
	$(libsubdir) as libexecsubdir.

2012-05-18  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
