@@ -1,3 +1,8 @@
+2012-05-20  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/i386/driver-i386.c (host_detect_local_cpu): Support
+	RDRND, F16C and FSGSBASE.
+
 2012-05-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR rtl-optimzation/53373
